--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-
+<footer></footer>
     <script type="module" src="/src/main.jsx"></script>
     <script src="/index.jsx" type="module"></script>
 
